; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regcomp.c_numst.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regcomp.c_numst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.subre = type { i16, %struct.subre*, %struct.subre* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.subre*, i32)* @numst to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @numst(%struct.subre* %0, i32 %1) #0 {
  %3 = alloca %struct.subre*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.subre* %0, %struct.subre** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.subre*, %struct.subre** %3, align 8
  %7 = icmp ne %struct.subre* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %5, align 4
  %13 = trunc i32 %11 to i16
  %14 = load %struct.subre*, %struct.subre** %3, align 8
  %15 = getelementptr inbounds %struct.subre, %struct.subre* %14, i32 0, i32 0
  store i16 %13, i16* %15, align 8
  %16 = load %struct.subre*, %struct.subre** %3, align 8
  %17 = getelementptr inbounds %struct.subre, %struct.subre* %16, i32 0, i32 2
  %18 = load %struct.subre*, %struct.subre** %17, align 8
  %19 = icmp ne %struct.subre* %18, null
  br i1 %19, label %20, label %26

20:                                               ; preds = %2
  %21 = load %struct.subre*, %struct.subre** %3, align 8
  %22 = getelementptr inbounds %struct.subre, %struct.subre* %21, i32 0, i32 2
  %23 = load %struct.subre*, %struct.subre** %22, align 8
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @numst(%struct.subre* %23, i32 %24)
  store i32 %25, i32* %5, align 4
  br label %26

26:                                               ; preds = %20, %2
  %27 = load %struct.subre*, %struct.subre** %3, align 8
  %28 = getelementptr inbounds %struct.subre, %struct.subre* %27, i32 0, i32 1
  %29 = load %struct.subre*, %struct.subre** %28, align 8
  %30 = icmp ne %struct.subre* %29, null
  br i1 %30, label %31, label %37

31:                                               ; preds = %26
  %32 = load %struct.subre*, %struct.subre** %3, align 8
  %33 = getelementptr inbounds %struct.subre, %struct.subre* %32, i32 0, i32 1
  %34 = load %struct.subre*, %struct.subre** %33, align 8
  %35 = load i32, i32* %5, align 4
  %36 = call i32 @numst(%struct.subre* %34, i32 %35)
  store i32 %36, i32* %5, align 4
  br label %37

37:                                               ; preds = %31, %26
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
